# LLMEngineerNotes

./: README.org
Day01/: README.org
Day02/: pyproject.toml
Day03/: README.org  main.py
Day04/: claude_landing_page.html  gemini_landing_page.html  pyproject.toml
Day05/: main.py
Day06/: README.org  main.py
Day07/: README.org
Day09/: README.org  main.py  pyproject.toml
Day1/: README.org  main.py  pyproject.toml
Day2/: README.org  main.py  pyproject.toml
Day3/: README.org  pyproject.toml
Day4/: .env.example  README.org  main.py  openai_landing_page.html
Day5/: .env.example  README.org  main.py  pyproject.toml
Day6/: README.org  main.py  pyproject.toml
Day7/: README.org  main.py  pyproject.toml
Day8/: .#README.org  README.org  main.py  pyproject.toml
