[project]
name = "day7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.2.1",
    "dotenv>=0.9.9",
    "gradio>=5.49.1",
    "langchain>=1.0.1",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.0.1",
    "openai>=2.6.0",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.12.0",
]
